<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_AxisSetSlaveState" Id="{826b3849-ce16-4717-9daa-1c853595336a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AxisSetSlaveState
VAR_INPUT
	bExecute: BOOL;
	stHardware: ST_AxisHardware;
	reqState: WORD;
END_VAR
VAR_OUTPUT
	bDone: BOOL;
	bBusy: BOOL;
	bError: BOOL;
	nErrId: UDINT;
	currStateDrive: ST_EcSlaveState;
	currStateEnc: ST_EcSlaveState;
END_VAR
VAR
	fbDriveState: FB_EcSetSlaveState;
	fbEncState: FB_EcSetSlaveState;
	bBusyDrive: BOOL;
	bBusyEnc: BOOL;
	bErrorDrive: BOOL;
	bErrorEnc: BOOL;
	nErrIdDrive: UDINT;
	nErrIdEnc: UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Transition terminals if they exist
IF stHardware.drive_type > 0 THEN
	fbDriveState(sNetID:=stHardware.drive_ref.sNetId,
		nSlaveAddr:=stHardware.drive_ref.nSlaveAddr,
		bExecute:=bExecute,
		reqState:=reqState,
		bBusy=>bBusyDrive,
		bError=>bErrorDrive,
		nErrId=>nErrIdDrive,
		currState=>currStateDrive);
ELSE
	bBusyDrive := FALSE;
	bErrorDrive := FALSE;
	nErrIdDrive := 0;
END_IF
IF stHardware.enc_type > 0 THEN
	fbEncState(sNetID:=stHardware.enc_ref.sNetId,
		nSlaveAddr:=stHardware.enc_ref.nSlaveAddr,
		bExecute:=bExecute,
		reqState:=reqState,
		bBusy=>bBusyDrive,
		bError=>bErrorDrive,
		nErrId=>nErrIdDrive,
		currState=>currStateEnc);
ELSE
	bBusyEnc := FALSE;
	bErrorEnc := FALSE;
	nErrIdDrive := 0;
END_IF
bBusy := bBusyDrive OR bBusyEnc;
bDone := bExecute AND NOT bBusy;
bError := bErrorDrive OR bErrorEnc;
IF nErrIdDrive > 0 THEN
	nErrId := nErrIdDrive;
ELSE
	nErrId := nErrIdEnc;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_AxisSetSlaveState">
      <LineId Id="67" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="53" Count="2" />
      <LineId Id="34" Count="0" />
      <LineId Id="42" Count="1" />
      <LineId Id="56" Count="1" />
      <LineId Id="44" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="25" Count="3" />
      <LineId Id="64" Count="2" />
      <LineId Id="35" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="61" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>